Bug 486691 - Content Warnings Are Not Preserved Upon Reply
Summary: Content Warnings Are Not Preserved Upon Reply
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-06 22:07 UTC by Many
Modified: 2024-05-11 14:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Many 2024-05-06 22:07:14 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
Replying to posts does not leave the same content warning as the parent post - in fact, even if I manually turn on the CW field, it does not autofill the CW from the thread.

STEPS TO REPRODUCE
1. Click reply on a post with a content warning

OBSERVED RESULT
Content warning is not inherited from replied-to post.

EXPECTED RESULT
Content warning should be inherited, at least optionally.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: NixOS 23.11 
(available in About System)
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
This one's not a bug, more an opinionated default - but it's a default that goes against the current Mastodon web UI, Tusky, Semaphore/Pinafore, and I'm sure many other clients, so at the least, an option would be good for it. It's expected behavior, and socially, many people bristle at having the warnings accidentally removed from their posts, which an unsuspecting Tokodon user might not know about, causing undue social friction.
Comment 1 Joshua Goins 2024-05-11 14:38:49 UTC
Oops this was definitely not supposed to be intentional, I agree with this default.
Comment 2 Joshua Goins 2024-05-11 14:50:34 UTC
Git commit ae444b055ec42a30d305972383a5ae7f49a2c93b by Joshua Goins.
Committed on 11/05/2024 at 14:50.
Pushed by redstrate into branch 'master'.

Copy the spoiler text in replies

Also, some refactoring to make it simpler and move more logic to C++
where it belongs.

M  +1    -1    src/account/abstractaccount.cpp
M  +4    -8    src/content/ui/Main.qml
M  +1    -1    src/content/ui/PostDelegate/PostDelegate.qml
M  +3    -2    src/content/ui/StatusComposer/StatusComposer.qml
M  +8    -0    src/editor/posteditorbackend.cpp
M  +2    -0    src/editor/posteditorbackend.h
M  +1    -1    src/utils/navigation.h

https://invent.kde.org/network/tokodon/-/commit/ae444b055ec42a30d305972383a5ae7f49a2c93b
Comment 3 Joshua Goins 2024-05-11 14:50:50 UTC
Git commit 4f9f28574adb7b300a791196398d844eb4f4712a by Joshua Goins.
Committed on 11/05/2024 at 14:50.
Pushed by redstrate into branch 'release/24.05'.

Copy the spoiler text in replies

Also, some refactoring to make it simpler and move more logic to C++
where it belongs.
(cherry picked from commit ae444b055ec42a30d305972383a5ae7f49a2c93b)

M  +1    -1    src/account/abstractaccount.cpp
M  +4    -8    src/content/ui/Main.qml
M  +1    -1    src/content/ui/PostDelegate/PostDelegate.qml
M  +3    -2    src/content/ui/StatusComposer/StatusComposer.qml
M  +8    -0    src/editor/posteditorbackend.cpp
M  +2    -0    src/editor/posteditorbackend.h
M  +1    -1    src/utils/navigation.h

https://invent.kde.org/network/tokodon/-/commit/4f9f28574adb7b300a791196398d844eb4f4712a