Copy the spoiler text in replies

Also, some refactoring to make it simpler and move more logic to C++
where it belongs.

BUG: 486691
(cherry picked from commit ae444b055ec42a30d305972383a5ae7f49a2c93b)